<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/rand_num_error_message"
        style="@style/error_message"/>

    <TextView
        android:id="@+id/numberView"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/default_rand_num_text"
        android:textSize="16sp"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="220dp"
        android:textSize="30sp"
        android:text="@string/num_gen_hint"/>

    <EditText
        android:id="@+id/num_lower_bound"
        style="@style/input_number_box"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="30dp"
        android:hint="@string/lower_bound_hint"/>

    <TextView
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/and"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="170dp"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"/>

    <EditText
        android:id="@+id/num_upper_bound"
        style="@style/input_number_box"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/upper_bound_hint"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/generateNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:text="@string/generate_new" />

</RelativeLayout>