<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/make_choice_error_message"
        style="@style/error_message"/>

    <LinearLayout
        android:id="@+id/choice_one_row"
        style="@style/choice_row"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp">
        <TextView
            style="@style/choice_label"
            android:text="@string/choice_one_label"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/choice_one"
            style="@style/choice_input_box"
            android:hint="@string/choice_input_box_hint" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/choice_two_row"
        style="@style/choice_row"
        android:layout_below="@id/choice_one_row"
        android:layout_marginTop="20dp">
        <TextView
            style="@style/choice_label"
            android:text="@string/choice_two_label"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/choice_two"
            style="@style/choice_input_box"
            android:hint="@string/choice_input_box_hint" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/choice_three_row"
        style="@style/choice_row"
        android:layout_below="@id/choice_two_row"
        android:layout_marginTop="20dp">
        <TextView
            style="@style/choice_label"
            android:text="@string/choice_three_label"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/choice_three"
            style="@style/choice_input_box"
            android:hint="@string/choice_input_box_hint" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/choice_four_row"
        style="@style/choice_row"
        android:layout_below="@id/choice_three_row"
        android:layout_marginTop="20dp">
        <TextView
            style="@style/choice_label"
            android:text="@string/choice_four_label"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/choice_four"
            style="@style/choice_input_box"
            android:hint="@string/choice_input_box_hint" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/choice_five_row"
        style="@style/choice_row"
        android:layout_below="@id/choice_four_row"
        android:layout_marginTop="20dp">
        <TextView
            style="@style/choice_label"
            android:text="@string/choice_five_label"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/choice_five"
            style="@style/choice_input_box"
            android:hint="@string/choice_input_box_hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/choice_declaration_string"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/make_choice_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="40sp"
            android:layout_marginTop="10dp"/>
        <Button
            android:id="@+id/make_choice_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/choice_button_label"/>
    </LinearLayout>

</RelativeLayout>