<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/coin_flip_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/coin_flip_hint"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/coin_flip_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="100sp"
        android:text="@string/heads"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@id/coin_flip_hint"
        android:layout_marginTop="150dp"/>

    <Button
        android:id="@+id/coin_flip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coin_button_press"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@id/coin_flip_result"
        android:layout_marginTop="200dp"/>
</RelativeLayout>